Remove unused JVM options